# lunabotics_ros2_ws

./: README.md  TODO.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/brain_pkg/lib/brain_pkg/: brain
install/brain_pkg/share/brain_pkg/: package.ps1  package.sh  package.xml
install/control_pkg/lib/control_pkg/: drivetrain  scoop  testcontrol.py
install/control_pkg/share/control_pkg/: local_setup.sh  package.sh
install/interfaces_pkg/share/interfaces_pkg/: local_setup.sh  package.sh
install/interfaces_pkg/share/interfaces_pkg/cmake/: export_interfaces_pkg__rosidl_generator_cppExport.cmake  (+7 more)
install/motor_control_pkg/lib/motor_control_pkg/: drivetrain  scoop
install/motor_control_pkg/share/motor_control_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navigation_pkg/share/navigation_pkg/: local_setup.sh  package.sh
install/webgui_pkg/share/webgui_pkg/: package.sh
launch/: lunabotics_launch.py
log/: latest_build
src/brain_pkg/: setup.py
src/brain_pkg/brain_pkg/: brain.py
src/control_pkg/: CMakeLists.txt  canable_start.sh
src/control_pkg/src/: drivetrain.cpp  scoop.cpp
src/motor_control_pkg/: CMakeLists.txt
src/motor_control_pkg/src/: drivetrain.cpp  scoop.cpp
src/navigation_pkg/: package.xml  setup.py
src/sensors_pkg/: package.xml  setup.py
src/sparkcan/: README.md  canable_start.sh  package.xml
src/sparkcan/include/sparkcan/: SparkFlex.hpp  SparkMax.hpp
src/webgui_pkg/: package.xml  setup.py
src/webgui_pkg/webgui_pkg/: gui_server.py
(+4 files in other folders)
